Rename PatientIdModeCrossPartitionReplaceReferencesSvc to CrossPartitionReplaceReferencesSvc and refactor to use IRequestPartitionHelperSvc for partition determination
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>